# ido-protocol

./: .gitignore  Anchor.toml  Makefile  README.md  create-pool-example.ts  package-lock.json  package.json
programs/ido-protocol/: Cargo.toml
programs/ido-protocol/src/: access_controls.rs  anchor_metaplex.rs  errors.rs  lib.rs  state.rs
programs/ido-protocol/src/instructions_ido_v1/: create_pool.rs  deposit_nft.rs  deposit_ticket.rs  force_raise.rs  migrate_ownership.rs  mod.rs  recover_nft.rs  recover_ticket.rs  recover_usdc.rs  unlock_ticket.rs  update_pool.rs  whitelist_nft.rs  whitelist_ticket.rs
tests/: ido-protocol.ts
